--- a/templates/main.html
+++ b/templates/main.html
@@ -51,6 +51,7 @@
                         <img src="{% static '/static/static/templates/arrow_right.png' %}" class="img">
                     </div>
                     <div class="btn btn-primary confirm-button">OK!</div>
+                    <button id="again" class="not_visible">Заново</button>
                     <div class="go_next_state">
                         <img src="{% static '/static/static/templates/arrow_right.png' %}" class="img">
                     </div>
