--- a/static/templates/style.css
+++ b/static/templates/style.css
@@ -66,23 +66,21 @@ width:1600px!important;
 }
 
 .section-title div{
-width:1020px;
+    width:1023px;
     background:linear-gradient(to top, #eee, #bbb);
     border-top:2px solid #aaa;
     border-left:2px solid #aaa;
     border-right:2px solid #aaa;
-
+    margin-bottom:-6px;
+    margin-left:-1px;
 	border-radius:10px 10px 0px 0px;
 }
 
 .section-file-manager{
 	vertical-align:top;
 	text-align:left;
-	//background-color:green;
+	background-color:#eee;
 	width:270px;
-}
-
-.section-file-manager{
     border-left:2px solid #aaa;
     border-bottom:2px solid #aaa;
     border-right:2px solid #ddd;
@@ -94,7 +92,8 @@ width:1020px;
 	width:750px;
 	vertical-align:top;
 	text-align:center;
-	border-right:2px solid #aaa;
+	border-right:1px solid #aaa;
+	background-color:#eee;
 }
 
 .section-variants-title{
@@ -110,12 +109,15 @@ width:1020px;
 
 .section-move-description{
     vertical-align:top;
+
 }
 
 .section-results{
 	//background-color:pink;
 	padding:3px;
 	border-right:1px solid black;
+
+	background-color:#eee;
 }
 
 .section-results-txt{
@@ -127,17 +129,14 @@ width:1020px;
 }
 
 .section-tips{
+
+	background-color:#eee;
 	padding-left:13px;
 	padding-right:13px;
 	padding-bottom:13px;
 	height:250px;
 	vertical-align:top;
 	border-bottom:2px solid #aaa;
-}
-
-.reserved{
-	background-color:white;
-	//display:none;
 }
 
 /*Горизонтальный скроллер вариантов*/
@@ -332,6 +331,8 @@ width:1020px;
     font-size: 14px;
     line-height: 1.42857143;
     border-radius: 0 10px 10px 0;
+
+	background-color:#eee;
 }
 
 .used_tree_elem{
@@ -354,13 +355,13 @@ margin-left:100px;
 }
 
  .go_prev_state img, .go_next_state img{
-    max-height: 10%;
+    max-height: 50px;
     box-sizing: border-box;
 
  }
 
   .go_prev_state img:hover, .go_next_state img:hover{
-    max-height: 10.5%;
+    max-height: 53px;
     box-sizing: border-box;
 
  }
@@ -371,7 +372,7 @@ margin-left:100px;
 
 
 .go_prev_state img:active, .go_next_state img:active{
-    max-height: 10.1%;
+    max-height: 51px;
  }
 
  .tree_cursor{
