--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href='{% static "static/templates/bootstrap/css/bootstrap.min.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "static/templates/fileManager/grid.css" %}'>
 
-    <title>Сквозная диагностика</title>
+    <title>Интерактивная диагностика</title>
 
 </head>
 <body>
@@ -19,7 +19,7 @@
             <tr>
                 <td colspan="2" class="section-title">
                     <div>
-                        Утырки
+                        Диагностика v0.1
                     </div>
                 </td>
                 <td></td>
@@ -55,7 +55,7 @@
 
                 </td>
 
-                <td rowspan="3" class="ramka section-move-description">
+                <td rowspan="3" class="section-move-description">
                     {% block move_description %}{% endblock %}
                 </td>
 
