--- a/templates/main.html
+++ b/templates/main.html
@@ -86,7 +86,7 @@
         </table>
 
 
-    <button id="reinitializeStates">Обновить базу состояний</button>
+   <!---- <button id="reinitializeStates">Обновить базу состояний</button> --->
 </div>
 
 
