--- a/templates/drive_main.html
+++ b/templates/drive_main.html
@@ -21,7 +21,7 @@
 
 <nav role="navigation" class="navbar navbar-default">
     <div class="navbar-header">
-        <a href="#" class="navbar-brand">Охуитительная развозка!</a>
+        <a href="#" class="navbar-brand">Автоматическая развозка</a>
     </div>
 
 
@@ -53,6 +53,10 @@
     </div>
 </nav>
 
+
+<script src='{% static "static/templates/jquery.min.js" %}'></script>
+<script src='{% static "static/templates/bootstrap/js/bootstrap.min.js" %}'></script>
+<script src='{% static "static/templates/functions.js" %}'></script>
 
 <div>
     {% block login %}{% endblock %}
