--- a/drive/templates/my_address_list.html
+++ b/drive/templates/my_address_list.html
@@ -6,6 +6,10 @@
         <h1>Мои адреса</h1>
     </div>
 
+    <div class="row">
+
+<div class="col-md-2"></div>
+<div class="col-md-8">
 <table class="table table-striped table-hover">
     <thead>
     <tr>
@@ -42,8 +46,8 @@
     </tr>
     </tfoot>
 </table>
-
-
+</div><div class="'col-md-2"></div>
+ </div>
 </div>
 
 
