--- a/loginsys/templates/register.html
+++ b/loginsys/templates/register.html
@@ -1,13 +1,28 @@
 {% extends 'drive_main.html' %}
-
-
 {% block login %}
-    <div class="large-offset-3 large-6 columns">
-        <form action="/auth/register/" method="post" id="register_form">
-            {% csrf_token %}
-            {{ form }}
-
-            <input class="button" type="submit" value="Зарегистрироваться">
-        </form>
+<div class="container">
+    <div class="page-header">
+        <h1>Регистрация</h1>
     </div>
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <form action="/auth/register/" method="post" id="register_form">
+                {% csrf_token %}
+                <p>
+                    {{ form }}
+                </p>
+                <p>
+                    <button type="submit" class="btn btn-default">Зарегистрироваться</button>
+                </p>
+            </form>
+
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+</div>
+<script>
+        $(".container").find("input").addClass("form-control");
+
+</script>
 {% endblock %}
