--- a/static/templates/style.css
+++ b/static/templates/style.css
@@ -59,31 +59,33 @@ margin:0!important;
 	margin:10px!important;
 	width:150px;
 	font-size:25px!important;
-    background-color:#aaa!important;
+    //background-color:#aaa!important;
     border:2px solid #888!important;
 }
 
 .section-title{
-	text-align:center;
-	font-size:20px;
-	width:1020px;
-	border-bottom:1px solid #aaa;
+
+
 
 }
 
-.section-title div{
-    width:1023px;
+.section-title div{df-[ds.]\
+\\\\gb
+    width:882px!important;
+    height:70px;
     padding:8px;
-    background:linear-gradient(to top, #eee, #bbb);
-    border-top:2px solid #aaa;
-    border-left:2px solid #aaa;
-    border-right:2px solid #aaa;
-    margin-bottom:-6px;
-    margin-left:-1px;
-	border-radius:10px 10px 0px 0px;
+    background:url('/static/static/templates/head.png') no-repeat;
+    text-align:left;
+
+}
+
+.section-title div a{
+	font-size:10px;
+	 vertical-align:bottom;
 }
 
 .section-file-manager{
+display:none;
 	vertical-align:top;
 	text-align:left;
 	background-color:#eee;
@@ -97,12 +99,13 @@ margin:0!important;
 .section-variants{
 	padding-left:22px;
 	padding-right:22px;
-	width:750px;
-	height:450px!important;
+	width:882px;
+	min-height:540px!important;
 	vertical-align:top;
 	text-align:center;
 	border-top:1px solid #aaa;
 	border-right:2px solid #aaa;
+	border-left:2px solid #aaa;
 	background-color:#eee;
 }
 
@@ -119,56 +122,130 @@ margin:0!important;
 
 .section-move-description{
     vertical-align:top;
+    display:block;
+    position:absolute;
+    width:882px;
+    opacity:0.92;
 
 }
 
 .section-results{
-	padding:3px;
+width:882px;
 	border-right:2px solid #aaa;
+	border-left:2px solid #aaa;
+	border-bottom:2px solid #aaa;
 	background-color:#eee;
-	height:80px!important;
 }
+
+.splitter{
+    width:100%;
+    height:13px;
+    margin-bottom:15px;
+    background:url('/static/static/templates/head.png') no-repeat;
+}
+
 
 .section-results-txt{
 	resize: none;
 }
 
 .form-group{
-	marging:0!important;
-}
+    width:auto;
+	margin-left:13px;
+	margin-right:13px;
+	margin-bottom:13px!important;
+	}
 
 .section-tips{
-
+    vertical-align:top;
+    display:block;
+    position:absolute;
+    width:882px;
+    opacity:0.92;
+    display:inline-block;
+    border:2px solid #aaa;
+    min-height:645px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 10px;
 	background-color:#eee;
-	padding-left:13px;
-	padding-right:13px;
-	padding-bottom:13px;
-	height:250px;
-	vertical-align:top;
-	border-bottom:2px solid #aaa;
-	border-right:2px solid #aaa;
+	text-align:center;
+
 }
+
+.disabled{
+    opacity:1!important;
+    background-color:grey!important;
+}
+
+.section_tips_whitespace{
+    display:inline-block;
+    width:20%;
+}
+
+.section_tips_title{
+    width:54%;
+    display:inline-block;
+    font-size:25px;
+}
+
+.close_tips{
+    text-align:center;
+    margin-top:10px;
+    margin-bottom:10px;
+    padding:5px;
+    display:inline-block;
+    width:20%;
+    border: 2px solid #555;
+    cursor:pointer;
+    background-color:#007fc4;
+    color:white;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px black;
+    border-radius: 4px;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
+}
+
+.close_tips:hover{
+
+    text-shadow: 1px 1px 3px black, 0 0 1em blue;
+    background-color:#ddd;
+
+}
+
+.close_tips:active{
+
+
+    text-shadow: 1px 1px 2px black, 0 0 1em white;
+    background-color:#bbb;
+}
+
+
+
+
+
 
 /*Горизонтальный скроллер вариантов*/
 .wrap-variants {
-	width: 700px;
-	height: auto;
-	overflow-x: auto;
-	overflow-y: auto;
+	width: 100%;
+	height: 370px;
 }
 .wrap-variants ul {
 	min-width: 100%;
-	white-space: nowrap;
 	padding: 0;
 	
 }
 .wrap-variants li {
 	display:inline-block;
 	vertical-align:top;
-	width:200px;
-	height:270px;
-	margin-left:10px;
-	margin-right:10px;
+	width:190px;
+	height:180px;
+	margin-left:7px;
+	margin-right:7px;
+	margin-bottom:7px;
 	border:1px solid #888;
 	border-radius: 10px;
 	background-color:white;
@@ -212,29 +289,30 @@ margin:0!important;
  }
 
 .slider-header {
-	width: 720px;
+    margin-left: 20px;
+    margin-right: 20px;
 	border-top: 1px solid #888;
 	border-left: 1px solid #888;
 	border-right: 1px solid #888;
-	border-radius: 10px 10px 0 0;
 	padding: 5px;
 	margin-top: 5px;
 	padding-left:10px;
 	padding-right:10px;
-	cursor: pointer;
 	text-align: left;
 	font-size: 20px;
-	background:linear-gradient(to top, #eee, #bbb);
+	background:linear-gradient(to top, #01B6ED, #007fc4);
  }
 
 .slider-content {
+    margin-left: 20px;
+    margin-right: 20px;
     padding:10px;
-    width: 720px;
     border-top: 1px solid #888;
     border-bottom: 1px solid #888;
 	border-left: 1px solid #888;
 	border-right: 1px solid #888;
 	background: #fff;
+	text-align:left;
  }
 
 .slider-text {
@@ -247,78 +325,28 @@ margin:0!important;
 
 /*Значек подсказки для текущего действия*/
  .question{
-    display: inline-block;
-    width: 30px;
-    height: 30px;
+    display: table-cell;
+    width: 15%;
     margin-right:20px;
-    position: relative;
-    vertical-align: middle;
-    transition: all 0.3s ease;
     border: 0;
-    font-family: inherit;
-    font-size: 100%;
-    font-style: inherit;
-    font-weight: inherit;
-    outline: 0;
-    padding: 0;
-    cursor: pointer;
+    height:77px;
+    text-align:center;
+    vertical-align:middle;
  }
 
-.question:hover{
-    display: inline-block;
-    width: 32px;
-    height: 32px;
-    margin-right:20px;
-    position: relative;
-    vertical-align: middle;
-    transition: all 0.3s ease;
-    border: 0;
-    font-family: inherit;
-    font-size: 100%;
-    font-style: inherit;
-    font-weight: inherit;
-    outline: 0;
-    padding: 0;
-    cursor: pointer;
-    cursor: pointer;
+.question img:hover{
+    width: 47px;
  }
 
-
-.question:active{
-    display: inline-block;
-    width: 31px;
-    height: 31px;
-    margin-right:20px;
-    position: relative;
-    vertical-align: middle;
-    transition: all 0.3s ease;
-    border: 0;
-    font-family: inherit;
-    font-size: 100%;
-    font-style: inherit;
-    font-weight: inherit;
-    outline: 0;
-    padding: 0;
-    cursor: pointer;
+.question img:active{
+    width: 46px;
  }
-
-
 
  .question img{
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    border: 0;
-    height: auto;
-    max-width: 100%;
+    width: 45px;
     box-sizing: border-box;
-    font-family: inherit;
-    font-size: 100%;
-    font-style: inherit;
-    font-weight: inherit;
+    vertical-align:bottom;
+    cursor: pointer;
  }
 
  .not_visible{
@@ -328,19 +356,80 @@ margin:0!important;
 
 .move_description{
     display:inline-block;
-    border-top:2px solid #aaa;
-    border-right:2px solid #aaa;
-    border-bottom:2px solid #aaa;
-    width:400px;
-    min-height:700px;
-    padding-left:20px;
-    padding-right:20px;
+    border:2px solid #aaa;
+    width:100%;
+    min-height:645px;
+
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
-    border-radius: 0 10px 10px 0;
+    border-radius: 10px;
 
 	background-color:#eee;
+	text-align:center;
+}
+
+.move_description_whitespace{
+    width:20%;
+    display:inline-block;
+}
+.move_description_title{
+    display:inline-block;
+    width:54%;
+    font-size:25px;
+}
+
+.close_move_descriprion{
+    width:20%;
+    text-align:center;
+    margin-top:10px;
+    margin-bottom:10px;
+    padding:5px;
+    display:inline-block;
+    border: 2px solid #555;
+    cursor:pointer;
+    background-color:#007fc4;
+
+    color:white;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px black;
+    border-radius: 4px;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
+}
+
+.close_move_descriprion:hover{
+
+    text-shadow: 1px 1px 3px black, 0 0 1em blue;
+    background-color:#ddd;
+
+}
+
+.close_move_descriprion:active{
+
+
+    text-shadow: 1px 1px 2px black, 0 0 1em white;
+    background-color:#bbb;
+}
+
+
+
+
+
+
+
+
+
+.move_title{
+    width:80%;
+    display:table-cell;
+    vertical-align:top;
+}
+
+.move_title_elem{
+    display:table;
+    width:100%;
 }
 
 .used_tree_elem{
@@ -350,37 +439,46 @@ margin:0!important;
     border-radius:0 8px 8px 0;
 }
 
+.variant_navigation{
+    display:table;
+    width:100%;
+}
+
 .go_prev_state{
-display:inline;
 cursor: pointer;
 margin-right:100px;
+display:table-cell;
+width:20%;
+text-align:right;
+padding-right:25px;
 }
 
 .go_next_state{
-display:inline;
+display:table-cell;
 cursor: pointer;
-margin-left:100px;
+width:25%;
+text-align:left;
+padding-left:25px;
+
 }
 
  .go_prev_state img, .go_next_state img{
-    max-height: 50px;
-    box-sizing: border-box;
+    height: 50px;
 
  }
 
   .go_prev_state img:hover, .go_next_state img:hover{
-    max-height: 53px;
-    box-sizing: border-box;
+    height:52px;
 
  }
 
  .go_prev_state img{
-    transform: scale(-1, 1)
+
  }
 
 
 .go_prev_state img:active, .go_next_state img:active{
-    max-height: 51px;
+    height: 51px;
  }
 
  .tree_cursor{
@@ -397,15 +495,16 @@ margin-left:100px;
 }
 
 .mode_description_content{
-    margin-top:20px;
-    margin-bottom:20px;
+    margin-left:20px;
     margin-right:20px;
-    padding-left:20px;
-    padding-right:10px;
-    min-height:650px;
+    margin-bottom:20px;
+    padding:10px;
+    min-height:520px;
     border:1px solid #888;
     background-color:#fff;
-    border-radius: 0 5px 5px 0;
+    border-radius: 5px;
+    font-size:17px;
+    text-align:left;
 }
 
 .mode_description_content img{
@@ -418,22 +517,39 @@ margin-left:100px;
     padding:17px;
     margin:10px;
     font-size:25px;
-    border:2px solid #888;
-    border-radius:5px;
-    color:white;
-    background-color:#aaa!important;
+}
+
+.show_tips{
+    display:table-cell;
+    width:15%;
+    text-align:center;
+    vertical-align:middle;
 }
 
 
-.line_2{
-
-}
-
-.line_3{
-
-}
 
 
-.line_4{
-    height:100%;
+.show_tips img:hover{
+    width: 58px;
+ }
+
+.show_tips img:active{
+    width: 57px;
+ }
+
+ .show_tips img{
+    width: 56px;
+    box-sizing: border-box;
+    vertical-align:bottom;
+    cursor: pointer;
+ }
+
+
+
+
+
+
+.reserved_cell{
+display:table-cell;
+    width:20%;
 }
